--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@next/font": "^13.4.18",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
@@ -17,7 +18,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.18",
     "framer-motion": "^10.16.0",
-    "next": "13.4.18",
+    "next": "^13.5.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
