--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "framer-motion": "^10.16.0",
     "next": "^13.5.4",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.28",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.10.1",
     "react-slick": "^0.29.0",
     "resend": "^1.1.0",
